[package]
name = "stencila-attractor"
edition = "2024"
version.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stencila-agents = { path = "../agents" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
