[package]
name = "stencila-attractor"
edition = "2024"
version.workspace = true

[dependencies]
Inflector = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
stencila-agents = { path = "../agents" }
stencila-db = { path = "../db" }
stencila-interviews = { path = "../interviews" }
tar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
winnow = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
stencila-models3 = { path = "../models3" }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
