[package]
name = "binaries"
description = "Utilities for managing and calling external binaries"
version = "0.0.0"
edition = "2021"

[features]

# The CLI is not enabled by default to avoid extra dependencies for crates
# that only want to use `require()`.
cli = ["cli-utils", "serde_json", "structopt", "tracing"]

[dependencies]
binary = { path = "../binary", version = "0.0.0" }
once_cell = "1.9.0"
tokio = { version = "1.13.0", features = [
    "process",
    "macros",
    "io-util",
    "rt-multi-thread",
    "sync",
] }

cli-utils = { path = "../cli-utils", version = "0.0.0", optional = true, features = ["pretty"] }
serde_json = { version = "1.0.75", optional = true }
structopt = { version = "0.3.25", optional = true }
tracing = { version = "0.1.29", optional = true }

binary-asdf = { path = "../binary-asdf", version = "0.0.0", optional = true }
binary-chrome = { path = "../binary-chrome", version = "0.0.0", optional = true }
binary-chromium = { path = "../binary-chromium", version = "0.0.0", optional = true }
binary-node = { path = "../binary-node", version = "0.0.0", optional = true }
binary-pack = { path = "../binary-pack", version = "0.0.0", optional = true }
binary-pandoc = { path = "../binary-pandoc", version = "0.0.0", optional = true }
binary-podman = { path = "../binary-podman", version = "0.0.0", optional = true }
binary-poetry = { path = "../binary-poetry", version = "0.0.0", optional = true }
binary-python = { path = "../binary-python", version = "0.0.0", optional = true }
binary-r = { path = "../binary-r", version = "0.0.0", optional = true }
binary-stencila = { path = "../binary-stencila", version = "0.0.0", optional = true }

[dev-dependencies]
test-utils = { path = "../test-utils", version = "0.0.0" }
