[package]
name = "binaries"
description = "Utilities for managing and calling external binaries"
version = "0.0.0"
edition = "2021"

[features]

# The CLI is not enabled by default to avoid extra dependencies for crates
# that only want to use `require()`.
cli = ["cli-utils", "structopt"]

[dependencies]
binary = { path = "../binary" }

cli-utils = { path = "../cli-utils", optional = true, features = ["pretty"] }
structopt = { version = "0.3.25", optional = true }

binary-asdf = { path = "../binary-asdf", optional = true }
binary-chrome = { path = "../binary-chrome", optional = true }
binary-chromium = { path = "../binary-chromium", optional = true }
binary-node = { path = "../binary-node", optional = true }
binary-pack = { path = "../binary-pack", optional = true }
binary-pandoc = { path = "../binary-pandoc", optional = true }
binary-podman = { path = "../binary-podman", optional = true }
binary-poetry = { path = "../binary-poetry", optional = true }
binary-python = { path = "../binary-python", optional = true }
binary-r = { path = "../binary-r", optional = true }
binary-stencila = { path = "../binary-stencila", optional = true }

[dev-dependencies]
test-utils = { path = "../test-utils" }
